--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 <body>
     <header>
         <div class="marca">
-            <img class="logo" src="./media/principales/logo.png" alt="Logo">
-            <h1 id="top">C0D1G0>_WG</h1>
+            <a href="./index.html"><img class="logo" src="./media/principales/logo.png" alt="Logo"><h1 id="top">C0D1G0>_WG</h1></a>  
         </div>
         <h3 class="eslogan animate__animated animate__flipInX">for work and gaming</h3>
         <div class="redes">
@@ -108,7 +107,7 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="¿Qué buscas?" aria-label="Search">
                     <button class="btn btn-outline-info" type="submit"><img src="./media/principales/lupa.png" alt="lupa"></button>
                 </form>
             </div>
@@ -138,10 +137,10 @@
             <p>Las empresas se esmeran por decorar de forma excesiva sus productos y así llamar la atención, pero tené en cuenta, que siempre la calidad es más importante.</p>
         </div>
         <div class="reco6 wow animate__animated animate__fadeInRight">
-            <h3>Siempre tenemos artículos de lanzamiento que se ofrecen por menor valor que su antecesor, así que veni y Aprovecha nuestras ofertas!</h3>
+            <h3>Siempre tenemos artículos de lanzamiento que se ofrecen por menor valor que su antecesor, así que vení y aprovecha nuestras ofertas!</h3>
         </div>
     </main>
-    <h2 class="separador">Te presentamos los "Los más buscados"</h2>
+    <h2 class="separador">Te presentamos "Los más buscados"</h2>
     <section class="mas_buscados">
         <div class="articulos">
             <div class="cathard catgamer wow animate__animated animate__fadeIn">
@@ -152,7 +151,7 @@
             <div class="cathard catgamer wow animate__animated animate__fadeIn">
                 <p>Webcam </p>
                 <img src="./media/articulos/webcam_solarmax.png" width="200px" alt="webcam_solarmax">
-                <p>SOLARMAX ZOOMY  FULL HD 1080p. Precio $1.899,00</p>
+                <p>SOLARMAX ZOOMY FULL HD 1080p. Precio $1.899,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Microprocesador</p>
@@ -162,12 +161,12 @@
             <div class="cathard catgamer wow animate__animated animate__fadeIn">
                 <p>Placa de video</p>
                 <img src="./media/articulos/vga3060.png" width="200px" alt="placa_de_video_RTX3060">
-                <p>GEFORCE RTX3060 20GB MSI Precio. $642.515,00</p>
+                <p>GEFORCE RTX3060 20GB MSI. Precio $642.515,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Motherboard</p>
                 <img src="./media/articulos/Mother_MSI.png" width="200px" alt="Motherboard_MSI_B4500">
-                <p>MOTHER MSI B450M  PRO-VDH MAX SAM4 B450. Precio $9.891,00</p>
+                <p>MOTHER MSI B450M PRO-VDH MAX. Precio $9.891,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Disco sólido M.2 </p>
@@ -182,17 +181,17 @@
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Teclado</p>
                 <img src="./media/articulos/teclado_sentey.png" width="200px" alt="teclado_sentey_865">
-                <p>SENTEY GTX 865 MECANICO ESP. Precio $5.990,00</p>
+                <p>SENTEY GTX 865 MECÁNICO ESP. Precio $5.990,00</p>
             </div>
         </div>
     </section>
     <footer class="container-fluid">
         <div class="dire">
-            <h6>&copy Todos los derechos reservados por </h6>
-            <h6> JLG 2021 en el curso de "Desarrollo Web" de CoderHouse</h6>
-            <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
+            <h6>&copy Jorge Luis Grimalt 2022</h6>
+            <h6>Todos los derechos reservados</h6>
             <p>📞 Teléfono 5478-6226 </p> 
-            <a href=mailto:contacto@codigowg.com.ar>📨contacto@codigowg.com.ar</a>
+            <a class="e-mail" href=mailto:contacto@codigowg.com.ar>📨contacto@codigowg.com.ar</a>
+            <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
         </div>
         <div class="footer__marca mt-3">
             <img class="logo " src="./media/principales/logo.png" alt="Logo">
