--- a/pages/gaming.html
+++ b/pages/gaming.html
@@ -29,22 +29,21 @@
 <body>
     <header>
         <div class="marca">
-            <img class="logo" src="../media/principales/logo.png" alt="Logo">
-            <h1 id="top">C0D1G0>_WG</h1>
+            <a href="../index.html"><img class="logo" src="../media/principales/logo.png" alt="Logo"><h1 id="top">C0D1G0>_WG</h1></a>  
         </div>
-        <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
+        <h3 class="eslogan animate__animated animate__flipInX">for work and gaming</h3>
         <div class="redes">
             <div>
-                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
+                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" alt="instagram"></a>
             </div>
             <div>
-                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" whidth="32px" alt="facebook"></a>
+                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" alt="facebook"></a>
             </div>
             <div>
-                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" whidth="32px" alt="twitter"></a>
+                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" alt="twitter"></a>
             </div>
             <div>
-                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
+                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" alt="whatsapp"></a>
             </div>
         </div>
     </header>
@@ -108,14 +107,13 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="¿Qué buscas?" aria-label="Search">
                     <button class="btn btn-outline-info" type="submit"><img src="../media/principales/lupa.png" alt="lupa"></button>
                 </form>
             </div>
         </div>
     </nav>
-
-    <!-- Grilla de bootstrap -->
+    <!-- Articulos gamer -->
     <h2 class="separador"> Solo artículos gamer</h2>
     <div class="articulos gamer">
         <div class="cathard catgamer wow animate__animated animate__fadeIn">
@@ -169,7 +167,7 @@
             <p>W. DIGITAL SSD M.2 1TB<br> Precio $15.500,00</p>
         </div>
     </div>
-    <!-- recreo -->
+    <!-- Sección recreo -->
     <h2 class="separador">Lo que tenes que saber!</h2>
     <div class="recreo gamenews">
         <div class="recreo__uno">
@@ -207,9 +205,9 @@
     </div>
     </main>
     <footer class="container-fluid ">
-        <div class="dire ">
-            <h6>&copy Todos los derechos reservados por </h6>
-            <h6> JLG 2021 en el curso de "Desarrollo Web" de CoderHouse</h6>
+        <div class="dire">
+            <h6>&copy Jorge Luis Grimalt 2022</h6>
+            <h6>Todos los derechos reservados</h6>
             <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
             <p>📞 Teléfono 5478-6226 </p> 
             <a href=mailto:contacto@codigowg.com.ar>📨contacto@codigowg.com.ar</a>
