--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -29,22 +29,21 @@
 <body>
     <header>
         <div class="marca">
-            <img class="logo" src="../media/principales/logo.png" alt="Logo">
-            <h1 id="top">C0D1G0>_WG</h1>
+            <a href="../index.html"><img class="logo" src="../media/principales/logo.png" alt="Logo"><h1 id="top">C0D1G0>_WG</h1></a>  
         </div>
-        <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
+        <h3 class="eslogan animate__animated animate__flipInX">for work and gaming</h3>
         <div class="redes">
             <div>
-                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
+                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" alt="instagram"></a>
             </div>
             <div>
-                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" whidth="32px" alt="facebook"></a>
+                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" alt="facebook"></a>
             </div>
             <div>
-                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" whidth="32px" alt="twitter"></a>
+                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" alt="twitter"></a>
             </div>
             <div>
-                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
+                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" alt="whatsapp"></a>
             </div>
         </div>
     </header>
@@ -108,14 +107,14 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="¿Qué buscas?" aria-label="Search">
                     <button class="btn btn-outline-info" type="submit"><img src="../media/principales/lupa.png" alt="lupa"></button>
                 </form>
             </div>
         </div>
     </nav>
+    <!-- Hardware products-->
     <main class="repuestos hardware">
-
         <aside class="categorias">
             <ul>
                 <li>Hard</li>
@@ -132,7 +131,6 @@
                 <li>Ofertas</li>
             </ul>
         </aside>
-        <!-- Hardware products -->
         <div class="articulos hardware">
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Gabinete</p>
@@ -147,7 +145,7 @@
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Teclado</p>
                 <img src="../media/articulos/teclado_sentey.png" width="200px" alt="teclado_sentey_869">
-                <p>SENTEY GTX 869 MECANICO ESP. Precio $7.990,00</p>
+                <p>SENTEY GTX 869 MECÁNICO ESP. Precio $7.990,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Notebook</p>
@@ -167,7 +165,7 @@
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Motherboard</p>
                 <img src="../media/articulos/Mother_MSI.png" width="200px" alt="Motherboard_MSI_B450">
-                <p>MOTHER MSI B450M PRO-VDH MAX SAM4 B450 . Precio $9.891,00</p>
+                <p>MOTHER MSI B450M PRO-VDH MAX. Precio $9.891,00</p>
             </div>
             <div class="cathard catgamer wow animate__animated animate__fadeIn">
                 <p>Auriculares </p>
@@ -192,7 +190,7 @@
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Teclado</p>
                 <img src="../media/articulos/teclado_sentey.png" width="200px" alt="teclado_sentey_865">
-                <p>SENTEY GTX 865 MECANICO ESP. Precio $5.990,00</p>
+                <p>SENTEY GTX 865 MECÁNICO ESP. Precio $5.990,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Gabinete</p>
@@ -214,13 +212,12 @@
                 <img src="../media/articulos/vga2060.png" width="200px" alt="placa_de_video_RTX2060">
                 <p>ASUS RTX2060 18GB DDR5. Precio $113.000,00</p>
             </div>
-
         </div>
     </main>
     <footer class="container-fluid">
         <div class="dire">
-            <h6>&copy Todos los derechos reservados por </h6>
-            <h6> JLG 2021 en el curso de "Desarrollo Web" de CoderHouse</h6>
+            <h6>&copy Jorge Luis Grimalt 2022</h6>
+            <h6>Todos los derechos reservados</h6>
             <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
             <p>📞 Teléfono 5478-6226 </p> 
             <a href=mailto:contacto@codigowg.com.ar>📨contacto@codigowg.com.ar</a>
