--- a/pages/software.html
+++ b/pages/software.html
@@ -29,22 +29,21 @@
 <body>
     <header>
         <div class="marca">
-            <img class="logo" src="../media/principales/logo.png" alt="Logo">
-            <h1 id="top">C0D1G0>_WG</h1>
+            <a href="../index.html"><img class="logo" src="../media/principales/logo.png" alt="Logo"><h1 id="top">C0D1G0>_WG</h1></a>  
         </div>
-        <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
+        <h3 class="eslogan animate__animated animate__flipInX">for work and gaming</h3>
         <div class="redes">
             <div>
-                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
+                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" alt="instagram"></a>
             </div>
             <div>
-                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" whidth="32px" alt="facebook"></a>
+                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" alt="facebook"></a>
             </div>
             <div>
-                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" whidth="32px" alt="twitter"></a>
+                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" alt="twitter"></a>
             </div>
             <div>
-                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
+                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" alt="whatsapp"></a>
             </div>
         </div>
     </header>
@@ -108,7 +107,7 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="¿Qué buscas?" aria-label="Search">
                     <button class="btn btn-outline-info" type="submit"><img src="../media/principales/lupa.png" alt="lupa"></button>
                 </form>
             </div>
@@ -116,7 +115,7 @@
     </nav>
     <h2 class="separador">Tomemos un recreo</h2>
     <br>
-    <!-- Seccion recreo -->
+    <!-- Sección recreo -->
     <section class="recreo">
         <div class="recreo__uno">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/p0t1x8ZM_-U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -170,7 +169,7 @@
         <div class="catsoft wow animate__animated animate__fadeIn">
             <img src="../media/articulos/soft_visual_studio.png" width="200px" alt="Microsoft Visual Studio Enterprise 2019">
             <div>
-                <h3>Microsoft Visual Studio Enterprise 2019 (PC & Mac) </h3>
+                <h3>Microsoft Visual Studio Enterprise 2019 = $14.500.- </h3>
                 <p>Tipo de licencia: de por vida para 1 PC | Funciona en sistemas de 32 y 64 bits. La clave del producto y las instrucciones de instalación se envían por correo electrónico después de la compra. Idiomas: español, inglés, francés, alemán, italiano,
                     polaco, checo, portugués (Brasil), ruso, turco, chino (simplificado), chino (tradicional), japonés, coreano. Visual Studio 2019 es una solución completa e integrada con herramientas de desarrollo y servicios en la nube.</p>
             </div>
@@ -178,9 +177,8 @@
         <div class="catsoft wow animate__animated animate__fadeIn">
             <img src="../media/articulos/soft_win10.png" width="200px" alt="Windows 10 Home">
             <div>
-                <h3>Windows 10 Home Retail $17.500.-</h3>
-                <p>Idiomas: Todos los idiomas | 32/64 bits. La clave del producto y las instrucciones se envían por correo electrónico inmediatamente después de la compra de este producto. Retail: La clave de producto se puede activar en una computadora a la
-                    vez, pero se puede mover a una nueva computadora si es necesario.</p>
+                <h3>Windows 10 Home Retail = $17.500.-</h3>
+                <p>Todos los idiomas - 32/64 bits. La clave del producto y las instrucciones se envían por correo electrónico inmediatamente después de la compra. La clave de producto se puede activar en una única computadora pero se puede mover a una nueva si es necesario.</p>
             </div>
         </div>
         <div class="catsoft wow animate__animated animate__fadeIn">
@@ -194,11 +192,11 @@
     </div>
     <footer class="container-fluid">
         <div class="dire">
-            <h6>&copy Todos los derechos reservados por </h6>
-            <h6> JLG 2021 en el curso de "Desarrollo Web" de CoderHouse</h6>
+            <h6>&copy Jorge Luis Grimalt 2022</h6>
+            <h6>Todos los derechos reservados</h6>
             <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
             <p>📞 Teléfono 5478-6226 </p> 
-            <a href=mailto:contacto@codigowg.com.ar>📨contacto@codigowg.com.ar</a>>
+            <a href=mailto:contacto@codigowg.com.ar>📨contacto@codigowg.com.ar</a>
         </div>
         <div class="footer__marca">
             <img class="logo " src="../media/principales/logo.png" alt="Logo">
