--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,22 +29,21 @@
 <body>
     <header>
         <div class="marca">
-            <img class="logo" src="../media/principales/logo.png" alt="Logo">
-            <h1 id="top">C0D1G0>_WG</h1>
+            <a href="../index.html"><img class="logo" src="../media/principales/logo.png" alt="Logo"><h1 id="top">C0D1G0>_WG</h1></a>  
         </div>
-        <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
+        <h3 class="eslogan animate__animated animate__flipInX">for work and gaming</h3>
         <div class="redes">
             <div>
-                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
+                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" alt="instagram"></a>
             </div>
             <div>
-                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" whidth="32px" alt="facebook"></a>
+                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" alt="facebook"></a>
             </div>
             <div>
-                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" whidth="32px" alt="twitter"></a>
+                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" alt="twitter"></a>
             </div>
             <div>
-                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
+                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" alt="whatsapp"></a>
             </div>
         </div>
     </header>
@@ -108,13 +107,13 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="¿Qué buscas?" aria-label="Search">
                     <button class="btn btn-outline-info" type="submit"><img src="../media/principales/lupa.png" alt="lupa"></button>
                 </form>
             </div>
         </div>
     </nav>
-    </nav>
+    <!-- Frmulario de contacto y ubicación -->
     <main class="direcMapa">
         <form class="formulario" action="">
             <fieldset>
@@ -167,8 +166,8 @@
     </main>
     <footer class="container-fluid">
         <div class="dire">
-            <h6>&copy Todos los derechos reservados por </h6>
-            <h6> JLG 2021 en el curso de "Desarrollo Web de CoderHouse</h6>
+            <h6>&copy Jorge Luis Grimalt 2022</h6>
+            <h6>Todos los derechos reservados</h6>
             <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
             <p>📞 Teléfono 5478-6226 </p> 
             <a href=mailto:contacto@codigowg.com.ar>📨contacto@codigowg.com.ar</a>
