correcion de texto

--- a/pages/gaming.html
+++ b/pages/gaming.html
@@ -173,8 +173,8 @@
         <div class="recreo__uno">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/9Dh4Gc98KLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="news">
-                <h3  >MICROSOFT COMPRA ACTIVISION BLIZZARD: TODOS los DETALLES: Precio, juegos, estudios...</h3>
-                <p> Xbox ha anunciado la adquisición de Activision Blizzard y King, responsables de franquicias como Call of Duty, Warcraft, Diablo,  Crash Bandicoot y muchas más, por un precio astronómico de 70.000 millones de dólares. Te contamos todos los detalles en este vídeo.</p>
+                <h3  >MICROSOFT COMPRA ACTIVISION BLIZZARD: Todos los detalles, precios, juegos, estudios...</h3>
+                <p> Xbox ha anunciado la adquisición de Activision Blizzard y King, responsables de franquicias como Call of Duty, Warcraft, Diablo, Crash Bandicoot y muchas más, por un precio astronómico de 70.000 millones de dólares. Te contamos todos los detalles en este video.</p>
             </div>
         </div>
         <div class="recreo__dos">
@@ -182,7 +182,7 @@
             <div class="news">
                 <h3>Competencias Gamers! y sacale el jugo a tu compu 🕹
                 </h3>
-                <p>No solo podes competir mientras la pasas bien, sino que también podes ganar dinero haciendolo.</p>
+                <p>No solo podes competir mientras la pasas bien, sino que también podes ganar dinero haciéndolo.</p>
             </div>
         </div>
         <div class="recreo__uno">
@@ -190,7 +190,7 @@
             <div class="news">
                 <h3>The most incredible Grand Final comeback 😉
                 </h3>
-                </p>| Hashtag Tom v Levi de Weerd | PS4 Final | EU Qualifier 3</p>
+                </p>Hashtag Tom vs Levi de Weerd | PS4 Final | EU Qualifier 3</p>
             </div>
         </div>
         <div class="recreo__dos">
@@ -198,7 +198,7 @@
             <div class="news">
                 <h3 class="recreo__dos__texto ">Torneo Easy FIFA 21 ¡La gran Final Argentina!
                 </h3>
-                <p>¡Bienvenidas y bienvenidos a la gran final del Torneo Easy FIFA 21 en Argentina! Lorena Miki, Yiyo Garcilazo, Juanma Viera y Nonoloko van a ser los que esta noche te contarán todo sobre los épicos partidos que se vivirán en el estadio virtual. ¡HOY LOS 4 FINALISTAS SE JUGARÁN TODO!</p>
+                <p>¡Bienvenidas y bienvenidos a la gran final del Torneo Easy FIFA 21 en Argentina! Lorena Miki, Yiyo Garcilazo, Juanma Viera y Nonoloko seran los que esta noche te contarán todo sobre los épicos partidos que se vivirán en el estadio virtual. ¡HOY LOS 4 FINALISTAS SE JUGARÁN TODO!</p>
             </div>
         </div>
     </div>
