--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -113,7 +113,7 @@
             </div>
         </div>
     </nav>
-    <!-- Frmulario de contacto y ubicación -->
+    <!-- Formulario de contacto y ubicación -->
     <main class="direcMapa">
         <form class="formulario" action="">
             <fieldset>
