correcione de recreo

--- a/pages/software.html
+++ b/pages/software.html
@@ -114,19 +114,18 @@
         </div>
     </nav>
     <h2 class="separador">Tomemos un recreo</h2>
-    <br>
     <!-- Sección recreo -->
     <section class="recreo">
         <div class="recreo__uno">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/p0t1x8ZM_-U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div>
+            <div class="wow animate__zoomIn">
                 <h3>Diseño Gráfico ¿Cuáles son las Herramientas Necesarias?</h3>
                 <p>En este video vemos todo lo que necesitamos para nuestro curso de Diseño Gráfico para principiantes.</p>
             </div>
         </div>
         <div class="recreo__dos">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/WKl4EoRIlz4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div>
+            <div class="wow animate__zoomIn">
                 <h3 class="recreo__dos__texto">Competencias Gamers! y sacale el jugo a tu compu 🕹
                 </h3>
                 <p>Te contamos todo lo que necesitas saber sobre la Fortnite World Cup 2019, el torneo mundial del famoso Battle Royale en el cual se disputaron millones de dolares. </p>
