--- a/pages/gaming.html
+++ b/pages/gaming.html
@@ -149,7 +149,7 @@
         <div class="cathard wow animate__animated animate__fadeIn">
             <p>Teclado</p>
             <img src="../media/articulos/teclado_sentey.png" width="200px" alt="art7">
-            <p>SENTEY GTX 865 MECANICO ESP<br> Precio $5.990,00</p>
+            <p>SENTEY GTX 865 MECÁNICO ESP<br> Precio $5.990,00</p>
         </div>
         <div class="cathard wow animate__animated animate__fadeIn">
             <p>Gabinete</p>
@@ -168,18 +168,18 @@
         </div>
     </div>
     <!-- Sección recreo -->
-    <h2 class="separador">Lo que tenes que saber!</h2>
+    <h2 class="separador wow animate__zoomInDown">Lo que tenés que saber!</h2>
     <div class="recreo gamenews">
-        <div class="recreo__uno">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/9Dh4Gc98KLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div class="news">
+        <div class="recreo__uno ">
+            <iframe  width="560" height="315" src="https://www.youtube.com/embed/9Dh4Gc98KLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="news wow animate__animated animate__fadeInRight">
                 <h3  >MICROSOFT COMPRA ACTIVISION BLIZZARD: Todos los detalles, precios, juegos, estudios...</h3>
                 <p> Xbox ha anunciado la adquisición de Activision Blizzard y King, responsables de franquicias como Call of Duty, Warcraft, Diablo, Crash Bandicoot y muchas más, por un precio astronómico de 70.000 millones de dólares. Te contamos todos los detalles en este video.</p>
             </div>
         </div>
-        <div class="recreo__dos">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/iGoirv2lLMY?start=5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div class="news">
+        <div class="recreo__dos ">
+            <iframe  width="560" height="315" src="https://www.youtube.com/embed/iGoirv2lLMY?start=5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="news animate__animated animate__fadeInLeft">
                 <h3>Competencias Gamers! y sacale el jugo a tu compu 🕹
                 </h3>
                 <p>No solo podes competir mientras la pasas bien, sino que también podes ganar dinero haciéndolo.</p>
@@ -187,7 +187,7 @@
         </div>
         <div class="recreo__uno">
             <iframe width=" 560 " height="315 " src="https://www.youtube.com/embed/I5CMCCOzb4s " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
-            <div class="news">
+            <div class="news animate__animated animate__fadeInRight">
                 <h3>The most incredible Grand Final comeback 😉
                 </h3>
                 </p>Hashtag Tom vs Levi de Weerd | PS4 Final | EU Qualifier 3</p>
@@ -195,10 +195,10 @@
         </div>
         <div class="recreo__dos">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/L6T6RJ3Lh6o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div class="news">
+            <div class="news animate__animated animate__fadeInLeft">
                 <h3 class="recreo__dos__texto ">Torneo Easy FIFA 21 ¡La gran Final Argentina!
                 </h3>
-                <p>¡Bienvenidas y bienvenidos a la gran final del Torneo Easy FIFA 21 en Argentina! Lorena Miki, Yiyo Garcilazo, Juanma Viera y Nonoloko seran los que esta noche te contarán todo sobre los épicos partidos que se vivirán en el estadio virtual. ¡HOY LOS 4 FINALISTAS SE JUGARÁN TODO!</p>
+                <p>¡Bienvenidas y bienvenidos a la gran final del Torneo Easy FIFA 21 en Argentina! Lorena Miki, Yiyo Garcilazo, Juanma Viera y Nonoloko serán los que esta noche te contarán todo sobre los épicos partidos que se vivirán en el estadio virtual. ¡HOY LOS 4 FINALISTAS SE JUGARÁN TODO!</p>
             </div>
         </div>
     </div>
