dimensiones de formulario

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -135,7 +135,7 @@
                 </div>
                 <br>
                 <div>
-                    <label for="civil">Consulta por: </label>
+                    <label for="civil">Tema:</label>
                     <input type="radio" value="Hardware" name="civil">Hardware
                     <input type="radio" value="Software" name="civil">Software
                     <input type="radio" value="otra" name="civil"> Otro
